@@ -4,17 +4,17 @@ package ch.admin.bar.siard2.api.export;
 import ch.admin.bar.siard2.api.Archive;
 import ch.admin.bar.siard2.api.Schema;
 import ch.admin.bar.siard2.api.primary.ArchiveImpl;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @DisplayName("Test Html Export of Tables")
 public class HtmlExportTest {
@@ -38,12 +38,10 @@ public class HtmlExportTest {
         archive.close();
 
         // then
-        String generatedHtml = new String(Files.readAllBytes(fileTable.toPath()), StandardCharsets.UTF_8);
-        String expectedHtml = new String(Files.readAllBytes(Paths.get("src/test/resources/export/CUSTOMERS.html")), StandardCharsets.UTF_8);
+        String generatedHtml = Files.readString(fileTable.toPath());
+        String expectedHtml = Files.readString(Paths.get("src/test/resources/export/CUSTOMERS.html"));
 
-        assertEquals("Generated HTML should match expected content",
-                     expectedHtml.trim(),
-                     generatedHtml.trim());
+        assertEquals(expectedHtml.trim(), generatedHtml.trim(), "Generated HTML should match expected content");
     }
 
 }
